# scratch.ops

./: .gitignore  setup.cfg
src/limon_ops/onboarding/: repo_setup.py
src/limon_ops/repo_admin/: branch_lifecycle_manager.py  repo_administration.py
src/limon_ops/util/: git_local_client.py  github_client.py
src/nb_apps/: scratch_nb_utils.py
src/notebooks/: NBU-powered scratchpad.ipynb
src/scratch_nb_apps/: __init__.py  scratch_nb_application.py  scratch_nb_utils.py
src/scratch_ops/onboarding/: scratch_repo_bundle.py
