[metadata]
name = limon_ops

# Versioning numbers try to follow PEP 440
# https://www.python.org/dev/peps/pep-0440/
version = 0.1
#version = dev

author = Alejandro Hernandez
author_email = alejandro@finastra.com
license = MIT
description = Smithening sandbox for operato functionality
long_description = file: README.md
long_description_content_type = text/markdown
url = # TODO 
project_urls =
    Bug Tracker = 
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
include_package_data = True
python_requires = >=3.10
install_requires = 
    notebook >=6.5.2        # Needed so that Jupyter notebooks use this virtual env and Python version consistently
    # Use built-in tomllib instead toml >=0.10.2
    pyyaml >= 6.0
    xlsxwriter >=3.0.3      # Needed to write user-friendly-formatted Excel spreadsheets
    httpx >= 0.26.0

[options.packages.find]
where = src

[options.package_data]

[options.entry_points]
console_scripts =
    # TODO ea = apodeixi.cli.apo_cli:apo_cli

